src/styles/common/layout.scss
// Box sizing

* {
  box-sizing: border-box;
}

*::before,
*::after {
  box-sizing: border-box;
}

// Selection

::selection {
  background: var(--main-color);
  color: #fff;
  text-shadow: none;
}

// Scrollbar

@include media("hover") {
  ::-webkit-scrollbar-track {
    background-color: rgba(#000, 0.1);
    border-radius: 5px;
  }

  ::-webkit-scrollbar {
    width: 10px;
    height: 10px;
  }

  ::-webkit-scrollbar-thumb {
    background-color: rgba(#000, 0.4);
    border-radius: 5px;
  }
}

// Visually hidden

.visually-hidden {
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden;
  clip: rect(1px, 1px, 1px, 1px);
  white-space: nowrap;
}

// Html

html {
  background: var(--light-color);
  height: 100%;
  -webkit-tap-highlight-color: rgba(#000, 0);
  margin: 0;
  padding: 0;
}

// Body

body {
  @include t1;

  min-height: 100%;
  min-width: var(--min-width);
  max-width: var(--max-body-width);
  margin: 0 auto;
  padding: 0;
  overflow-x: hidden;
  position: relative;
  display: flex;
  flex-direction: column;
  color: var(--text-color);

  &::after {
    transition: all 1s 0.3s var(--easing);
    content: "";
    position: fixed;
    z-index: 99999;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: var(--light-gray-color);
  }

  &:not(.light-page)::after {
    background-color: var(--dark-gray-color);
  }

  html.is-loaded & {
    transition: all 1s var(--easing);

    &::after {
      opacity: 0;
      visibility: hidden;
    }
  }
}

// Sections

.sections {
  flex: 1 0 auto;
  display: flex;
  flex-direction: column;
}

.section {
  @include section;

  position: relative;
  overflow-x: hidden;

  .sections &:last-child {
    flex-grow: 1;
  }
}

.section__image {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;

  img {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }

  &::after {
    @include absolute-block(100%, 100%);

    left: 0;
    top: 0;
    background: rgba(#000, 0.5);
  }
}

.section__inner {
  @include inner;

  position: relative;
}

.section--fluid {
  .section__inner {
    max-width: 100%;
  }
}

.section--no-spacing {
  padding-top: 0;
  padding-bottom: 0;
}

.section--no-inner-spacing {
  .section__inner {
    padding-left: 0;
    padding-right: 0;
  }
}

.section--spacing-lg {
  @include media(">=laptop") {
    --section-spacing: var(--section-spacing-lg);
  }
}

// Blocks

.block {
  @include block;

  display: flex;
  flex-wrap: wrap;

  & > * {
    flex: 0 0 100%;
    width: 100%;
  }
}

.block__header {
  @include vmargin(var(--heading-spacing));

  display: flex;
}

.block__title {
  @include h1;

  display: block;

  .block--center & {
    text-align: center;
  }

  .block__header & {
    @include vmargin(0);

    &:not(:last-child) {
      margin-right: var(--heading-spacing);
    }
  }
}

.block__footer {
  @include vmargin(var(--heading-spacing));

  display: flex;
}

